the base container went f34 to alpine3

--- a/devop-build/Containerfile
+++ b/devop-build/Containerfile
@@ -1,9 +1,26 @@
-FROM fedora:34
+FROM alpine:3
+
+#ENV JAVA_HOME="$(dirname $(dirname $(realpath $(which javac))))"
+ENV GRADLE_HOME="/opt/gradle"
+ENV PATH="$GRADLE_HOME/bin:$PATH"
+
+COPY gradle.tar.xz /tmp
 
 RUN set -xe ; \
 	#
 	# install some utility packages
-	dnf install --refresh -y iputils findutils;
+	apk add xz coreutils git gcc make linux-headers openjdk11 python3; \
+	#
+	# extract gradle
+	tar xvf /tmp/gradle.tar.xz -C /opt; \
+	chown -R root $GRADLE_HOME; \
+	chgrp -R root $GRADLE_HOME; \
+	chmod +x $GRADLE_HOME/bin/gradle; \
+	#
+	# do some test
+	git --version; \
+	javac -version; \
+	gradle -version;
 
-CMD /usr/bin/bash
+CMD sh
 
