--- a/jenkins-build/Containerfile
+++ b/jenkins-build/Containerfile
@@ -2,7 +2,7 @@ FROM ao/devop:alpine3
 
 ENV JENKINS_HOME="/var/www/jenkins" 
 
-COPY jenkins.tar.xz /tmp
+COPY jenkins.war.xz /tmp
 
 RUN set -xe ; \
 	#
@@ -10,8 +10,9 @@ RUN set -xe ; \
 	mkdir -p $JENKINS_HOME ; \
 	#
 	# extract war
-	xz -d /tmp/jenkins.tar.xz; \
-	tar xvf /tmp/jenkins.tar -C /var/www; \
+	cd /var/www; \
+	mv /tmp/jenkins.war.xz .; \
+	xz -d jenkins.war.xz; \
 	chown root /var/www/jenkins.war; \
 	chgrp root /var/www/jenkins.war; \
 	#
