--- a/devops-build/Dockerfile
+++ b/devops-build/Dockerfile
@@ -1,4 +1,4 @@
-FROM ao/alpine3
+FROM ao/alpine:3
 
 ENV GRADLE_HOME="/opt/gradle"
 ENV PATH="$GRADLE_HOME/bin:$PATH"
@@ -7,18 +7,19 @@ COPY gradle.tar.xz /tmp
 
 RUN set -xe ; \
 	#
-	# install some utility packages
-	apk add gcc make linux-headers openjdk11 python3;\
-	#
 	# extract gradle
-	tar xvf /tmp/gradle.tar.xz -C /opt; \
+	xz -d /tmp/gradle.tar.xz; \
+	tar xf /tmp/gradle.tar -C /opt; \
 	chown -R root $GRADLE_HOME; \
 	chgrp -R root $GRADLE_HOME; \
 	chmod +x $GRADLE_HOME/bin/gradle; \
 	#
+	# install some utility packages
+	apk add gcc make linux-headers openjdk11 python3;\
+	#
 	# do some test
 	gcc --version; \
-	python --version; \
+	python3 --version; \
 	javac -version; \
 	gradle -version;
 
