apps is moved, ssh is added

--- a/alpine3-build/Dockerfile
+++ b/alpine3-build/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3
 RUN set -xe ; \
 	#
 	# install git prerequired packages 
-	apk add coreutils bash xz git; \
+	apk add coreutils bash xz git openssh; \
 	git --version; 
 
 CMD bash
