--- a/appsrv-build/Dockerfile
+++ b/appsrv-build/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3
 RUN set -xe ; \
 	#
 	# install git prerequired packages 
-	apk add coreutils xz bash openjdk11-jre-headless; \
+	apk add coreutils xz bash openssh openjdk11-jre-headless; \
 	# 
 	# test java
 	java --version; 
