add sshd and it's config

--- a/appsrv-build/Dockerfile
+++ b/appsrv-build/Dockerfile
@@ -1,14 +1,24 @@
 FROM alpine:3
 
+COPY sshd_config /tmp
+
 RUN set -xe ; \
 	#
 	# install git prerequired packages 
-	apk add coreutils xz bash openssh openjdk11-jre-headless; \
+	apk add coreutils xz bash openssh openrc openjdk11-jre-headless; \
+	#
+	# add sshd as service
+	mv /tmp/sshd_config /etc/ssh/ ; \
+	rc-update add sshd; \
 	# 
 	# test java
 	java --version; 
-	
+
+# the global folder for all appications
 VOLUME /apps
+
+# change ssh port
+EXPOSE 8022
 
 CMD bash
 
