add sqlite into the base image

--- a/alpine3-build/Dockerfile
+++ b/alpine3-build/Dockerfile
@@ -2,9 +2,11 @@ FROM alpine:3
 
 RUN set -xe ; \
 	#
-	# install git prerequired packages 
-	apk add coreutils bash xz git openssh; \
-	git --version; 
+	# install pre-required packages
+	apk add sqlite coreutils bash xz git openssh; \
+	# check some of them
+	git --version; \
+	sqlite3 -version;
 
 CMD bash
 
