done postgresql updates

--- a/alpine3-build/Dockerfile
+++ b/alpine3-build/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3
 RUN set -xe ; \
 	#
 	# install pre-required packages
-	apk add sqlite coreutils bash xz git openssh; \
+	apk add coreutils bash xz musl-locales sqlite git openssh; \
 	# check some of them
 	git --version; \
 	sqlite3 -version;
